# vstats

./: .gitignore  Dockerfile  Dockerfile.cloud  Dockerfile.cloud.prebuilt  README.md  dev.sh  vstats.db-shm
.github/workflows/: README.md  build-go.yml  deploy-docs-site.yml  pages.yml  release.yml
agent/: Cargo.toml
agent-go/: main.go  metrics.go  websocket.go
agent/src/: config.rs  main.rs  metrics.rs  types.rs  websocket.rs
docs/: CNAME  agent-uninstall.ps1  agent.ps1  agent.sh  index.html  install.sh
docs-site/: vite.config.ts
docs-site/deploy/: .env  README.md  docker-compose.yml  env.example
docs-site/deploy/nginx/: nginx.conf
docs-site/deploy/nginx/conf.d/: default.conf
docs-site/deploy/scripts/: deploy.sh  generate-ssl.sh  test-local.sh
docs-site/public/: install.sh
docs-site/scripts/: dev.sh
docs-site/src/: App.tsx
docs-site/src/api/: cloud.ts
docs-site/src/i18n/locales/: en.json  zh.json
docs-site/src/pages/: Admin.tsx  AuthCallback.tsx  Cloud.tsx  Documentation.tsx
oauth-proxy/src/: index.ts
scripts/: agent-upgrade.ps1  agent.ps1  agent.sh  build-release.sh  install-agent.sh  install.sh  start-dev.sh  test-local.sh
server/: Cargo.toml  xprob-config.json
server-go/: config.go  db.go  go.mod  go.sum  handlers.go  main.go  types.go  websocket.go
server-go/cmd/cli/: README.md  main.go
server-go/cmd/cli/commands/: auth.go  client.go  config.go  output.go  root.go  server.go
server-go/cmd/cloud/: README.md  main.go
server-go/cmd/server/: db.go  handlers_agent.go  handlers_auth.go  handlers_metrics.go  handlers_oauth.go  handlers_servers.go  handlers_settings.go  handlers_version.go  handlers_wallpaper.go  main.go  websocket.go
server-go/internal/cloud/auth/: auth.go  oauth.go
server-go/internal/cloud/config/: config.go
server-go/internal/cloud/database/: database.go  servers.go  users.go
server-go/internal/cloud/handlers/: auth.go  health.go  servers.go
server-go/internal/cloud/middleware/: middleware.go
server-go/internal/cloud/models/: models.go
server-go/internal/cloud/redis/: redis.go
server-go/internal/cloud/websocket/: websocket.go
server/src/: collector.rs  config.rs  handlers.rs  main.rs  middleware.rs  types.rs  websocket.rs
unsplash-proxy/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
unsplash-proxy/src/: index.ts
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: agent.sh
web/src/: App.tsx  index.css  types.ts
web/src/components/: CpuCores.tsx  Icons.tsx  MetricCard.tsx  ProgressBar.tsx  ProgressRing.tsx
web/src/context/: AuthContext.tsx  ThemeContext.tsx
web/src/hooks/: useMetrics.ts
web/src/i18n/locales/: de.ts  en.ts  es.ts  fr.ts  ja.ts  ko.ts  pt.ts  ru.ts  zh.ts
web/src/pages/: Dashboard.tsx  Login.tsx  ServerDetail.tsx  Settings.tsx
web/src/styles/themes/: aesthetic.css  base.css  brutalist.css  cyberpunk.css  daylight.css  glassmorphism.css  handdrawn.css  index.css  industrial.css  magazine.css  memphis.css  midnight.css  minimal.css  retro.css  (+4 more)
web/src/utils/: logoUtils.ts
